--- a/exs/ex6/app.html
+++ b/exs/ex6/app.html
@@ -4,10 +4,29 @@
     <title>Understanding Data Flow</title>
     <script src="comps/gamemenu.js"></script>
     <script src="comps/gamebg.js"></script>
+    <script src="comps/particles.js"></script>
+    
   </head>
 
   <body>
-    <game-menu></game-menu>
-    <game-bg></game-bg>
+    <game-menu
+    text="desert">
+    </game-menu>
+    <game-menu 
+    text="forest">
+    </game-menu>
+    <game-menu 
+    text="snow">
+    </game-menu>
+    <game-menu 
+    text="valley">
+    </game-menu>
+    <game-bg
+      id="gamebg"
+    ></game-bg>
+    <the-particle
+    class ="color"
+    ></the-particle>
   </body>
 </html>
+
