finish increase/decrease healthbar

--- a/exs/ex6/app.html
+++ b/exs/ex6/app.html
@@ -5,7 +5,7 @@
     <script src="comps/gamemenu.js"></script>
     <script src="comps/gamebg.js"></script>
     <script src="comps/particles.js"></script>
-    
+    <script src="comps/healthbar.js"></script>
   </head>
 
   <body>
@@ -27,6 +27,8 @@
     <the-particle
     class ="color"
     ></the-particle>
+    <the-healthbar
+    class = "gamehealth">
+    </the-healthbar>
   </body>
 </html>
-
