--- a/exs/ex6/app.html
+++ b/exs/ex6/app.html
@@ -21,6 +21,9 @@
     <game-menu 
     text="valley">
     </game-menu>
+    <game-menu 
+    text="start">
+    </game-menu>
     <game-bg
       id="gamebg"
     ></game-bg>
